# vrp

./: .codecov.yml  .gitattributes  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  solve_problem.sh  tags_constraint_solution.txt
examples/json-pragmatic/: Cargo.toml  README.md
examples/json-pragmatic/benches/: general_benchmark.rs
examples/json-pragmatic/data/: break.basic.matrix.json  break.basic.problem.json  break.basic.solution.json  delivery.basic.problem.json  delivery.basic.solution.json  multi-day.basic.matrix.json  multi-day.basic.problem.json  multi-day.basic.solution.json  multi-job.basic.locations.json  multi-job.basic.matrix.json  multi-job.basic.problem.json  multi-job.basic.solution.json  multi-job.mixed.problem.json  multi-job.mixed.solution.json  multi-objective.balance-activities.problem.json  multi-objective.goal.problem.json  profiles.basic.matrix.car.json  profiles.basic.matrix.truck.json  profiles.basic.problem.json  profiles.basic.solution.json  relation-any.basic.locations.json  relation-any.basic.matrix.json  relation-strict.basic.matrix.json  relation-strict.basic.problem.json  relation-strict.basic.solution.json  relation-tour.basic.matrix.json  relation-tour.basic.problem.json  relation-tour.basic.solution.json  reload.basic.locations.json  reload.basic.matrix.json  reload.basic.problem.json  reload.basic.solution.json  reload.multi.locations.json  reload.multi.matrix.json  reload.multi.problem.json  reload.multi.solution.json  simple.basic.matrix.json  simple.basic.problem.json  simple.basic.solution.json  skills.basic.matrix.json  (+6 more)
examples/json-pragmatic/src/: main.rs
experiments/heuristic-research/: Cargo.toml  README.md
experiments/heuristic-research/src/: lib.rs  main.rs
experiments/heuristic-research/www/: bootstrap.js  common_ui.js  d3-ForceEdgeBundling.js  experiment.style.css  index.html  index.js  style.css  vector.bootstrap.js  vector.html  vector.index.js  vector.style.css  vrp.bootstrap.js  vrp.html  vrp.index.js  vrp_fdeb.bootstrap.js  vrp_fdeb.html  vrp_fdeb.index.js  vrp_gsom.bootstrap.js  vrp_gsom.html  vrp_gsom.index.js
here/: Cargo.toml
here/data/small/: minimal.problem.json
here/src/: lib.rs
here/src/checker/: index.rs  jobs.rs  mod.rs  models.rs  relations.rs  vehicles.rs
here/src/constraints/: breaks.rs  extra_costs.rs  mod.rs  multi_tour_capacity.rs  reachable.rs  reload_capacity.rs  skills.rs
here/src/extensions/: break_aware_objective.rs  mod.rs  multi_dim_capacity.rs
here/src/json/: coord_index.rs  deserializer.rs  mapper.rs  mod.rs  parser.rs  reader.rs  utils.rs
here/src/utils/: mod.rs  permutations.rs
here/tests/features/: mod.rs
here/tests/helpers/: checker.rs  core.rs  mod.rs  problem.rs  solution.rs  solver.rs
rosomaxa/: Cargo.toml  README.md
rosomaxa/src/: example.rs  lib.rs  prelude.rs
rosomaxa/src/algorithms/: mod.rs
rosomaxa/src/evolution/: config.rs  mod.rs  objectives.rs  simulator.rs  telemetry.rs
rosomaxa/src/heuristics/: mod.rs
rosomaxa/src/hyper/: dynamic_selective.rs  mod.rs  static_selective.rs
rosomaxa/src/population/: elitism.rs  greedy.rs  mod.rs  rosomaxa.rs
rosomaxa/src/termination/: max_generation.rs  max_time.rs  min_variation.rs  mod.rs  target_proximity.rs
rosomaxa/src/utils/: comparison.rs  environment.rs  error.rs  iterators.rs  mod.rs  noise.rs  parallel.rs  random.rs  timing.rs  types.rs
rosomaxa/tests/helpers/: example.rs  macros.rs  mod.rs
rosomaxa/tests/unit/: example_test.rs
vrp-api/: Cargo.toml
vrp-api/config/: config.full.json  config.telemetry.json
vrp-api/src/: main.rs
vrp-cli/: Cargo.toml  README.md  pyproject.toml
vrp-cli/src/: args.rs  formats.rs  lib.rs  main.rs
vrp-cli/src/commands/: analyze.rs  check.rs  generate.rs  import.rs  mod.rs  solve.rs
vrp-cli/src/extensions/: mod.rs
vrp-cli/src/import/: app.rs  command.rs  csv.rs  hre.rs  mod.rs
vrp-cli/src/solve/: app.rs  command.rs  mod.rs
vrp-cli/tests/features/: generate.rs  mod.rs  solve.rs
vrp-cli/tests/helpers/: generate.rs  mod.rs
vrp-cli/tests/unit/: lib_test.rs  main_test.rs
vrp-core/: Cargo.toml  README.md
vrp-core/examples/: README.md  custom_constraint.rs  custom_objective.rs  cvrp.rs  pdptw.rs  tags_constraint_example.rs
vrp-core/examples/common/: routing.rs
vrp-core/src/: lib.rs  macros.rs  prelude.rs
vrp-core/src/algorithms/: assignment.rs  mod.rs
vrp-core/src/construction/: mod.rs
vrp-core/src/models/: domain.rs  examples.rs  extras.rs  goal.rs  mod.rs  variant.rs
vrp-core/src/refinement/: mod.rs
vrp-core/src/solver/: builder.rs  evolution.rs  heuristic.rs  mod.rs  population.rs  telemetry.rs
vrp-core/src/utils/: bit_vec.rs  bloom_filter.rs  comparison.rs  environment.rs  hasher.rs  iterators.rs  mod.rs  mutability.rs  noise.rs  parallel.rs  random.rs  statistics.rs  time_quota.rs  timing.rs  types.rs  variation_coefficient.rs
vrp-core/tests/helpers/: macros.rs  mod.rs
vrp-pragmatic/: Cargo.toml  README.md
vrp-pragmatic/benches/: pragmatic_simple.rs
vrp-pragmatic/data/small/: minimal.matrix.json  minimal.problem.json
vrp-pragmatic/src/: lib.rs
vrp-pragmatic/src/checker/: assignment.rs  breaks.rs  capacity.rs  limits.rs  mod.rs  relations.rs  routing.rs
vrp-pragmatic/src/constraints/: areas.rs  breaks.rs  compatibility.rs  depots.rs  dispatch.rs  even_dist.rs  extra_costs.rs  groups.rs  mod.rs  order.rs  priorities.rs  reachable.rs  reload_capacity.rs  reloads.rs  skills.rs  work_balance.rs
vrp-pragmatic/src/construction/: mod.rs
vrp-pragmatic/src/extensions/: approximated_transport_cost.rs  location_resolver.rs  mod.rs  multi_dim_capacity.rs  only_vehicle_activity_cost.rs  route_modifier.rs  typed_actor_group_key.rs
vrp-pragmatic/src/format/: coord_index.rs  dimensions.rs  entities.rs  location_fallback.rs  mod.rs
vrp-scientific/: Cargo.toml  README.md
vrp-scientific/benches/: solomon_goal.rs
vrp-scientific/src/: lib.rs
vrp-solver/: Cargo.toml  README.md
vrp-solver/src/: algorithm.rs  builder.rs  lib.rs  population.rs
(+1591 files in other folders)
