[package]
name = "vrp-rst"
version = "0.1.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rayon = "1.1"
rand = "0.7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"