[workspace]
resolver = "2"

members = [
    "rosomaxa",
    "vrp-core",
    "vrp-cli",
    "vrp-pragmatic",
    "vrp-scientific",

    "examples/json-pragmatic",
    "experiments/heuristic-research"
]

[workspace.package]
version = "1.22.1"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2021"

[workspace.dependencies]
# internal dependencies
rosomaxa = { path = "rosomaxa", version = "0.7.1" }
vrp-core = { path = "vrp-core", version = "1.22.1" }
vrp-scientific = { path = "vrp-scientific", version = "1.22.1" }
vrp-pragmatic = { path = "vrp-pragmatic", version = "1.22.1" }
vrp-cli = { path = "vrp-cli", version = "1.22.1" }

# external dependencies
hashbrown = "0.14.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
rustc-hash = "1.1.0"

[profile.release]
lto = "fat"       # enables "fat" LTO, for faster release builds
codegen-units = 1 # makes sure that all code is compiled together, for LTO

[profile.test]
opt-level = 1     # enables thin local LTO and some optimizations.

[profile.bench]
lto = "fat"       # enables "fat" LTO, for faster becnhmark builds
codegen-units = 1 # makes sure that all code is compiled together, for LTO
