[workspace]
resolver = "2"

members = [
    "rosomaxa",
    "vrp-core",
    "vrp-cli",
    "vrp-pragmatic",
    "vrp-scientific",

    "examples/json-pragmatic",
    "experiments/heuristic-research"
]

[workspace.package]
version = "1.24.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2021"

[workspace.dependencies]
# internal dependencies
rosomaxa = { path = "rosomaxa", version = "0.8.0" }
vrp-core = { path = "vrp-core", version = "1.24.0" }
vrp-scientific = { path = "vrp-scientific", version = "1.24.0" }
vrp-pragmatic = { path = "vrp-pragmatic", version = "1.24.0" }
vrp-cli = { path = "vrp-cli", version = "1.24.0" }

# external dependencies
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
rustc-hash = "2.0.0"
paste = "1.0.15"

# dev dependencies
criterion = "0.5.1"

[profile.release]
lto = "fat"       # enables "fat" LTO, for faster release builds
codegen-units = 1 # makes sure that all code is compiled together, for LTO

[profile.test]
opt-level = 1     # enables thin local LTO and some optimizations.

[profile.bench]
lto = "fat"       # enables "fat" LTO, for faster becnhmark builds
codegen-units = 1 # makes sure that all code is compiled together, for LTO
