[package]
name = "here"
version = "0.1.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"