[package]
name = "here"
version = "0.1.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
edition = "2018"

[lib]
name = "here"
crate-type = ["cdylib", "lib"]

[dependencies]
core = { path = "../core" }
solver = { path = "../solver" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
rand = "0.7.2"
