[package]
name = "rosomaxa"
version = "0.3.0"
edition = "2021"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["heuristics", "optimization"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
description = "A rosomaxa algorithm and other building blocks for creating a solver for optimization problems"

[dependencies]
rayon = "1.7.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rustc-hash = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
