[package]
name = "rosomaxa"
version = "0.7.1"
description = "A rosomaxa algorithm and other building blocks for creating a solver for optimization problems"
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = []
# an experimental asynchronous evolution targeting better performance on multiple CPUs
async-evolution = ["tokio"]

[dependencies]
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
rand_distr = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.16.0"
tokio = { version= "1.35.1", features=["sync", "rt"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
js-sys = "0.3.66"
