[package]
name = "vrp-api"
version = "0.0.2"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "../README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2021"
description = "An api service for VRP solver"

[features]
default = ["csv-format", "scientific-format"]

csv-format = ["csv"]
scientific-format = ["vrp-scientific"]

[dependencies]
vrp-cli = { path = "../vrp-cli", version = "1.18.4" }
vrp-core = { path = "../vrp-core", version = "1.18.4" }
vrp-scientific = { path = "../vrp-scientific", version = "1.18.4", optional = true }
vrp-pragmatic = { path = "../vrp-pragmatic", version = "1.18.4" }

futures = { version = '0.3.19' }
csv = { version = "1.1.6", optional = true }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
actix-web = { version = '4.2.0' }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "3.1.6"
ctrlc = { version = "3.0", features = ["termination"] }
num_cpus = "1.13.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
js-sys = "0.3.56"

[dev-dependencies]
tempfile = "3.3.0"