[package]
name = "vrp-cli"
version = "1.21.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "../README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2021"
description = "A command line interface for VRP solver"

[features]
default = ["csv-format", "scientific-format"]

csv-format = ["csv"]
scientific-format = ["vrp-scientific"]
py_bindings = ["dep:pyo3"]

[lib]
name = "vrp_cli"
crate-type = ["cdylib", "lib"]

[dependencies]
vrp-core = { path = "../vrp-core", version = "1.21.0" }
vrp-scientific = { path = "../vrp-scientific", optional = true, version = "1.21.0" }
vrp-pragmatic = { path = "../vrp-pragmatic", version = "1.21.0" }

csv = { version = "1.2.1", optional = true }
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "4.2.4"
ctrlc = { version = "3.2.5", features = ["termination"] }
num_cpus = "1.15.0"

# see https://github.com/xd009642/tarpaulin/issues/1092
[target.'cfg(all(not(target_arch = "wasm32"), not(tarpaulin)))'.dependencies]
pyo3 = { version= "0.18.3", features=["extension-module"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84" }
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61"

[dev-dependencies]
tempfile = "3.5.0"
