[package]
name = "vrp-cli"
description = "A command line interface for VRP solver"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["vrp-core", "csv-format", "scientific-format"]

async-evolution = ["vrp-core/async-evolution"]
csv-format = ["csv"]
scientific-format = ["vrp-scientific"]
py_bindings = ["dep:pyo3"]

[lib]
name = "vrp_cli"
crate-type = ["cdylib", "lib"]

[dependencies]
vrp-core = { path = "../vrp-core", version = "1.21.1", optional = true }
vrp-scientific = { path = "../vrp-scientific", optional = true, version = "1.21.1" }
vrp-pragmatic = { path = "../vrp-pragmatic", version = "1.21.1" }

serde = { workspace = true }
serde_json = { workspace = true }

csv = { version = "1.2.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "4.3.19"
ctrlc = { version = "3.4.0", features = ["termination"] }
num_cpus = "1.16.0"

# see https://github.com/xd009642/tarpaulin/issues/1092
[target.'cfg(all(not(target_arch = "wasm32"), not(tarpaulin)))'.dependencies]
pyo3 = { version= "0.19.1", features=["extension-module"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.87" }
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.64"

[dev-dependencies]
tempfile = "3.7.0"
