[package]
name = "vrp-cli"
description = "A command line interface for VRP solver"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["vrp-core", "csv-format", "scientific-format"]

async-evolution = ["vrp-core/async-evolution"]
csv-format = ["csv"]
scientific-format = ["vrp-scientific"]
py_bindings = ["dep:pyo3"]

[lib]
name = "vrp_cli"
crate-type = ["cdylib", "lib"]

[dependencies]
vrp-core = { workspace = true, optional = true }
vrp-scientific = { workspace = true, optional = true}
vrp-pragmatic.workspace = true

serde.workspace = true
serde_json.workspace = true

csv = { version = "1.3.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "4.4.11"
ctrlc = { version = "3.4.1", features = ["termination"] }
num_cpus = "1.16.0"

# see https://github.com/xd009642/tarpaulin/issues/1092
[target.'cfg(all(not(target_arch = "wasm32"), not(tarpaulin)))'.dependencies]
pyo3 = { version= "0.20.0", features=["extension-module"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.89" }
serde-wasm-bindgen = "0.6.3"
js-sys = "0.3.66"

[dev-dependencies]
tempfile = "3.8.1"
