[package]
name = "vrp-core"
version = "1.19.1"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2021"
description = "A core algorithms to solve a Vehicle Routing Problem"

[dependencies]
rosomaxa = { path = "../rosomaxa", version = "0.2.6" }

rayon = "1.6.1"
rand = { version = "0.8.5", features = ["small_rng"] }

hashbrown = "0.13.1"
rustc-hash = "1.1.0"
nohash-hasher = "0.2.0"
