[package]
name = "vrp-core"
version = "1.21.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2021"
description = "A core algorithms to solve a Vehicle Routing Problem"

[dependencies]
rosomaxa = { path = "../rosomaxa", version = "0.5.0" }

rayon = "1.7.0"
rand = { version = "0.8.5", features = ["small_rng"] }

hashbrown = "0.13.2"
rustc-hash = "1.1.0"
nohash-hasher = "0.2.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
