[package]
name = "vrp-pragmatic"
description = "An extension logic for solving rich VRP"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
vrp-core.workspace = true

hashbrown.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

time = { version = "0.3.30", features = ["parsing", "formatting"] }

[dev-dependencies]
proptest = "1.3.1"
uuid = { version = "1.4.1", features = ["v4"] }
