[package]
name = "vrp-pragmatic"
description = "An extension logic for solving rich VRP"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
vrp-core.workspace = true

serde.workspace = true
serde_json.workspace = true
rand.workspace = true

time = { version = "0.3.36", features = ["parsing", "formatting"] }
paste = "1.0.15"

[dev-dependencies]
proptest = "1.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
