[package]
name = "vrp-pragmatic"
description = "An extension logic for solving rich VRP"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
vrp-core.workspace = true

serde.workspace = true
serde_json.workspace = true
rand.workspace = true

time = { version = "0.3.41", features = ["parsing", "formatting"] }
paste = "1.0.15"

[dev-dependencies]
criterion.workspace = true

proptest = "1.6.0"
uuid = { version = "1.17.0", features = ["v4"] }

[[bench]]
name = "pragmatic_simple"
harness = false
