[package]
name = "vrp-solver"
version = "1.0.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "../README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2018"
description = "An extension with custom metaheuristic for solving VRP"


[dependencies]
vrp-core = { path = "../vrp-core", version = "1.0.0" }