[package]
name = "json-pragmatic"
version = "1.21.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "optimization"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/vrp"
repository = "https://github.com/reinterpretcat/vrp"
edition = "2021"
description = "A code example for solving rich VRP using vrp crates"
publish = false

[dependencies]
vrp-pragmatic = { path = "../../vrp-pragmatic" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "general_benchmark"
harness = false
