[package]
name = "heuristic-research"
description = "A playground for heuristic research"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rosomaxa.workspace = true
vrp-scientific.workspace = true

serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true

# added features as it fails to compile without them on github CI
plotters = { version = "0.3.7", features = ["ab_glyph", "fontconfig-dlopen"] }
plotters-canvas = "0.3.0"
itertools = "0.14.0"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["HtmlCanvasElement", "console"] }
